--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Rainbow",
-  "version": "1.6.9-1",
+  "version": "1.6.10-1",
   "private": true,
   "scripts": {
     "setup": "yarn install && yarn ds:install && yarn allow-scripts && yarn postinstall",
@@ -30,6 +30,7 @@
     "lint:js": "eslint --cache --ext '.ts,.tsx,.js,.jsx' .",
     "lint:ts": "yarn tsc --skipLibCheck --noEmit",
     "postinstall": "./scripts/postinstall.sh",
+    "preview": "git reset && git commit -m \"/preview\" --allow-empty",
     "start": "react-native start",
     "start:clean": "watchman watch-del-all && rm -rf $TMPDIR/react-* && rm -rf $TMPDIR/metro-* && rm -rf $TMPDIR/haste-map-* && react-native start -- --reset-cache",
     "test": "jest test.js",
@@ -348,6 +349,7 @@
     "**/@hapi/hoek": "8.5.1",
     "**/glob-parent": "6.0.0",
     "**/merge-deep": "3.0.3",
+    "**/moment": "2.29.2",
     "**/css-what": "5.0.1",
     "**/tar": "6.1.11",
     "**/path-parse": "1.0.7",
@@ -363,6 +365,7 @@
     "**/follow-redirects": "1.14.8",
     "**/markdown-it": "12.3.2",
     "**/simple-get": "4.0.1",
+    "**/simple-plist": "1.3.1",
     "**/plist": "3.0.5",
     "**/minimist": "1.2.6",
     "react-native/react-devtools-core": "4.24.0"
